config/ingress.yaml
---
# make service key-value-service visible on internet
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: key-value-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: key-value-service
          servicePort: 80
